Changed visibility for testing